2010-09-19 14:40 adburton

	* src/: Makefile.am, gmameui-main-win.c, gmameui-main-win.h: Add new file
	  to handle presentation and callbacks for main window
	* src/: callbacks.c, callbacks.h, interface.c, interface.h: Remove and move
	  code into gmameui-main-win.[ch]
	* src/: gui.c, gui.h: Move code into gmameui-main-win.[ch]
	* po/POTFILES.in: Update with new and removed files
	* src/gmameui-ui.xml: Rename some menu entries

2010-09-16 21:10 adburton

	* src/: gui.c, gui.h, gmameui-gamelist-view.c, gmameui-gamelist-view.h,
	  gmameui.c, gmameui.h: Move functions out of 'generic' source files,
	  remove redundant code
	* po/POTFILES.in, src/: Makefile.am, about.c, about.h, callbacks.c: Use GTK
	  functions to build About dialog, delete redundant about.[ch]
	* src/: callbacks.c, common.c, gmameui-gamelist-view.c: Fix compilation
	  warnings

2010-09-15 21:00 adburton

	* src/: callbacks.c, callbacks.h, gui.h, gmameui-ui.xml: Rename Properties
	  to Romset Information

2010-09-15 20:00 adburton

	* src/: gmameui-sidebar.c, gmameui-sidebar.h, gui_prefs.c, gui_prefs.h,
	  gmameui.h, gui.c, interface.c: Build sidebar in code rather than
	  GtkBuilder file, use GtkImageView library rather than custom code for
	  resizing images, remove viewing different types of images in sidebar -
	  default to screenshot
	* data/Makefile.am, data/sidebar.builder, po/POTFILES.in: Remove
	  GtkBuilder file
	* configure.ac, src/Makefile.am: Add configure checks for GtkImageView,
	  conditional compilation of ROM validation
	* src/interface.c, data/filter_bar.builder: Move search field and filter
	  buttons above widgets
	* src/mame_options_dialog_helper.c: Add newline to end of file
	* src/game_list.c: Comment out debugging line that swamps the console
	* src/gmameui-search-entry.c: Fix GTK warnings about empty priv object

2010-09-12 19:30 adburton

	* src/io.c: Comment out unused priv structure causing segfaults (SF
	  Bug 3062642)

2010-08-18 19:15 adburton
